--- a/src/site/markdown/update-auto.md.vm
+++ b/src/site/markdown/update-auto.md.vm
@@ -87,6 +87,8 @@ Bei erfolgreicher Installation kommt folgende Meldung:
 Häufige Fehler
 --------------
 
+**Nach dem Ausführen des Update-Skripts erscheint keine Success-Meldung, sondern ein Fehler/eine Warnung.**
+
 Sollte die Bereitstellung bis Skriptende immer noch nicht fertiggestellt sein, kommt folgende Fehlermeldung:
 
 ```
@@ -100,6 +102,14 @@ ls /opt/wildfly-9.0.2.Final/standalone/deployments/dwh-j2ee-*.deployed
 ```
 
 Sollte eine Datei angezeigt werden, war das Update erfolgreich.
+
+**In der i2b2-Adminoberfläche werden keine Nutzer und Projekte angezeigt.**
+
+Im Internet Explorer kommt es in der i2b2-Oberfläche zu Darstellungsfehlern. So werden z.B. keine User unter "Manage Users" angezeigt und unter "Manage Projects" sind die Projekte nicht einsehbar (sattdessen erscheint ein permanentes Ladezeichen). Dieser Fehler ist bereits bekannt, kann aber von unserer Seite aus nicht behoben werden, da i2b2 eine externe Software von der wir lediglich die Schnittstelle nutzen. Wir würden Sie daher bitten für die Nutzerverwaltung einen anderen Browser zu verwenden (z.B. Firefox oder Chrome).
+
+**Die Testseite gibt weder eine positive noch eine negative Rückmeldung.**
+
+Dies ist ein Problem, das ab Version 1.0 im Internet Explorer besteht, alle anderen gängigen Browser sind hiervon nicht betroffen. Wir versuchen das Problem in einem kommenden Update zu beheben. Bitte verwenden Sie solange für das Testen der Verbindung und der E-Mail-Konfiguration einen anderen Browser.
 
 
 Test der Verbindung und der E-Mail-Konfiguration
