--- a/src/site/markdown/update-auto.md.vm
+++ b/src/site/markdown/update-auto.md.vm
@@ -29,15 +29,9 @@ Haben Sie direkt vom Server aus die Möglichkeit das Paket herunterzuladen, kön
 wget ${releaseRepoUrl}/org/aktin/dwh/dwh-update/${project.version}/dwh-update-${project.version}.tar.gz
 ```
 
-Besteht diese Möglichkeit nicht, können Sie das Paket alternativ von einem anderen Rechner aus herunterladen:
+Besteht diese Möglichkeit nicht, können Sie das Paket alternativ von einem anderen Rechner aus herunterladen. Kopieren oder laden Sie diese Datei anschließend ins Root Verzeichnis (`/root`) Ihres Servers:
 
 [${releaseRepoUrl}/org/aktin/dwh/dwh-update/${project.version}/dwh-update-${project.version}.tar.gz](${releaseRepoUrl}/org/aktin/dwh/dwh-update/${project.version}/dwh-update-${project.version}.tar.gz)
-
-Kopieren oder laden Sie diese Datei ins Root-Verzeichnis Ihres Servers:
-
-```
-/root
-```
 
 Entpacken Sie die Datei und wechseln Sie anschließend in das Verzeichnis des Updates:
 
@@ -82,6 +76,11 @@ Bei erfolgreicher Installation kommt folgende Meldung:
 ```
 +++SUCCESS+++ EAR successfully deployed after xxx sec
 ```
+
+```diff 
+- ACHTUNG: Ab Version 1.1 wird das alte CDA-Template V1.21 nicht mehr unterstützt! Bitte stellen Sie Ihre Version auf V1.26 um.```
+```
+
 
 
 Wichtige Änderungen seit Version 1.0
@@ -181,3 +180,7 @@ Aktin-Diagnose-Skript
 Sollten Probleme beim automatischen Update auftreten, so führen Sie bitte das Aktin-Diagnose-Skript aus. Eine genauere Beschreibung finden Sie auf der Seite [Installationsskript](install-script.html) im Bereich "Aktin-Diagnose-Skript".
 
 Senden Sie diese Datei bitte an den Aktin-Support, unter it-support(at)aktin.org, mit einer Support-Anfrage. Die erzeugten Logs helfen bei der Identifizierung von Problemen.
+
+```
+
+```
