--- a/src/site/markdown/update-auto.md.vm
+++ b/src/site/markdown/update-auto.md.vm
@@ -54,15 +54,7 @@ dwh-update
 - - ...
 ```
 
-Führen Sie das Skript zum Entfernen von ggf. vorhandenen Dubletten aus:
-
-```
-chmod a+x dubletten_cleanup.sh; ./dubletten_cleanup.sh
-```
-
-Nach Beendigung des Skripts befindet sich ein gleichnamiger Ordner im übergeordneten Verzeichnis (/root). In diesem befinden sich zur Nachvollziehbarkeit die verwendeten SQL-Statements sowie die Einträge (bzw. deren patient_num, encounter_num und sourcesystem_cd), die von der Löschung betroffen waren.
-
-Das Updateskript kann danach wie folgt ausgeführt werden:
+Das Updateskript kann dann wie folgt ausgeführt werden:
 
 ```
 ./aktin_dwh_update.sh
